--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,7 @@
+@import url('https://fonts.googleapis.com/css?family=Shadows+Into+Light|Source+Sans+Pro:40rce code pro0,700');
+html {
+  overflow-x: hidden;
+}
 body {
   background:white;
   font-size: 14px;
@@ -90,6 +94,10 @@ border-color: #333;
 .navbar-toggler-icon {
  background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 30 30'%3e%3cpath stroke='rgba%280, 0, 0, 0.55%29' stroke-linecap='round' stroke-miterlimit='10' stroke-width='2' d='M4 7h22M4 15h22M4 23h22'/%3e%3c/svg%3e");
  }
+
+.navbar .nav-link.active {
+    color: #007bff !important;
+}
 .content-section {
 padding: 100px 20px;
 text-align: center;
@@ -144,7 +152,7 @@ text-align: center;
 }
 
 .section-title-header p {
-  text: center;
+ /* text: center;*/
   font-weight: 400;
   line-height: 26px;
   padding-bottom: 36px;
